# type-inference

./: CHANGELOG.md  typeinference.cabal
app/: Main.hs
